--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  font-family: 'Roboto', sans-serif;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+  background-color: #151b29;
+}
+
+button {
+  background: none;
+  color:#ffa260;
+  border: 2px solid;
+  padding: 1em 2em;
+  font-size: 1em;
+  transition: color 0.25s, border-color 0.25s, box-shadow 0.25s,transform 0.25s;
+  margin-left: 20px;
+}
+
+button:hover {
+  border-color: #f1ff5c;
   color: white;
+  box-shadow: 0 0.5em 0.5em -0.4em #f1ff5c;
+  transform: translateY(-0.25em);
+  cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+h3 {
+  color: aliceblue;
+  font-size: 50px;
+  text-align: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p{
+  color: azure;
+  font-size: 100px;
+  text-align: center;
+}
+.press {
+  width: 300px;
+  position: absolute;
+  height: 300px;
+  margin-left: -590px;
+  margin-top: -245px;
+  border-radius: 50%;
+}
+.card {
+  border:solid #f1ff5c;
+  padding: 50px;
 }
